# sensai

./: .gitignore  LICENSE  README.md  vetur.config.js
.github/workflows/: backend.yml
backend/: pyproject.toml
backend/backend/: __init__.py  ai.py  database.py
backend/backend/routes/: auth.py  workout.py
website/: README.md  nuxt.config.js  package.json  windi.config.ts
website/components/Auth/: Login.vue  Register.vue
website/components/Icon/: Eye.vue  EyeOff.vue
website/components/Landing/: Hero.vue
website/components/Shared/: Footer.vue  Navbar.vue
website/components/Workout/: Card.vue  Coach.vue  Info.vue  Summary.vue
website/pages/: dashboard.vue  index.vue  login.vue  register.vue
website/pages/workout/: _id.vue
